# rust_ai_sdk

./: Cargo.toml  Justfile  README.md  plan.md  rust_ai_sdk_tool_prompt.md  summary.md  todo.json
examples/: Cargo.toml  Justfile  generate.rs
examples/chatbot/: Justfile
examples/chatbot/server/: Cargo.toml  README.md
examples/chatbot/server-explicit/: .env.example  Cargo.toml  Justfile  README.md
examples/chatbot/server-explicit/src/: main.rs
examples/chatbot/server/src/: main.rs
examples/chatbot/web/: index.html  package-lock.json  package.json  vite.config.ts
examples/chatbot/web/src/: main.tsx  style.css
examples/src/: generate.rs  stream.rs
examples/src/anthropic/: stream.rs
examples/src/openai/: stream.rs
examples/standalone/: .env.example  Cargo.toml  Justfile  README.md
examples/standalone/src/anthropic/: generate.rs  stream.rs  tool_use.rs
examples/standalone/src/gemini/: generate.rs  stream.rs  tool_use.rs
examples/standalone/src/openai/: event_inspection.rs  generate.rs  stream.rs  tool_stream.rs  tool_use.rs
scripts/: publish-crate.sh
src/: lib.rs
src/core/: error.rs  message.rs  mod.rs  model.rs  request.rs  result.rs  stream.rs  tool.rs  types.rs
src/providers/anthropic/: client.rs  error.rs  mod.rs  model.rs  models.rs  types.rs
src/providers/gemini/: client.rs  error.rs  mod.rs  model.rs  models.rs  types.rs
src/providers/openai/: client.rs  error.rs  mod.rs  model.rs  models.rs  types.rs
src/runtime/: generate.rs  message_stream.rs  mod.rs  stream.rs  tools.rs  turn.rs
