[package]
name = "ai_sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
eventsource-stream = "0.2.3"
futures-core = "0.3.32"
futures-util = "0.3.32"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
mockito = "1.7.2"
