[package]
name = "another-ai-sdk"
version = "0.0.3"
license = "MIT"
edition = "2024"
description = "Provider-neutral Rust SDK for streaming chat and tool calling."
repository = "https://github.com/christopher-caldwell/rust_ai_sdk"
readme = "README.md"
keywords = ["ai", "llm", "chat", "streaming", "tools"]
categories = ["api-bindings", "asynchronous"]
exclude = [
    "examples/**",
    "target/**",
]

[dependencies]
async-stream = { version = "0.3", optional = true }
async-trait = "0.1"
bytes = { version = "1", optional = true }
eventsource-stream = "0.2.3"
futures-core = "0.3.32"
futures-util = "0.3.32"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
mockito = "1.7.2"

[features]
default = []
message-stream = ["dep:async-stream", "dep:bytes"]
