[package]
name = "examples"
version = "0.1.0"
edition = "2024"

[dependencies]
ai_sdk = { path = ".." }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"

[[bin]]
name = "openai-generate"
path = "src/openai/generate.rs"

[[bin]]
name = "openai-stream"
path = "src/openai/stream.rs"

[[bin]]
name = "anthropic-generate"
path = "src/anthropic/generate.rs"

[[bin]]
name = "anthropic-stream"
path = "src/anthropic/stream.rs"
