[package]
name = "chatbot-server-explicit"
version = "0.1.0"
edition = "2024"

[dependencies]
another-ai-sdk = { version = "0.0.2", path = "../../..", features = ["message-stream"] }
axum = "0.8.9"
dotenvy = "0.15.7"
futures-core = "0.3.32"
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
